Fix remake that should look less smelly